--- a/style.css
+++ b/style.css
@@ -7,10 +7,14 @@
     min-height: 100vh;
     width: 100%;
     background-image:linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/banner.png);
-     background-position: center;
-     background-size: cover;
-     position: relative;
+    /* The linear gradient creates a semi-transparent dark overlay (with rgba values) on top of the background image.*/
+    background-position: center;
+    background-size: cover;
+    position: relative;
 }
+
+
+/* navigation bar -----------------------------------------------------------*/
 
 nav{
     display: flex;
@@ -26,15 +30,102 @@ nav img{
     flex:1;
     text-align: right;
 }
-.nav-links ul li{
+.nav-links ul li{         /*This selector targets the list items*/
      list-style: none;
-     display: inline-block;
-     padding: 8px 12px;
+     display: inline-block; /*list items are displayed as inline blocks, allowing them to be placed next to each other.*/
+     padding: 8px 12px;    /*The list items have padding of 8 pixels on top and bottom and 12 pixels on the left and right.*/
      position: relative;
 }
-.nav-links ul li a{
+.nav-links ul li a{    /*This selector targets the anchor tags within the list items*/
 color: aliceblue;
 text-decoration: solid;
-font-size: 13px;
+font-size: 15px;
 
 }
+
+.nav-links ul li::after{     
+    content: '';
+    width: 0%;
+    height: 2px;
+    background: #f44336;
+    display: block;
+    margin: auto;    
+    transition: 0.5s;  
+}
+
+.nav-links ul li:hover::after{     
+ 
+    width: 100%;
+} 
+
+/*navigation bar ends---------------------------------------------------------*/
+
+
+
+.textbox{
+    width:90% ;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
+}
+.textbox h1{
+    font-size: 62px;
+}
+.textbox p{
+    margin: 10px 0 40px;
+    font-size: 15px;
+    color: #fff;
+}
+.hero-btn{
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    border:1px solid #fff ;
+    padding: 12px 34px;
+    font-size:15px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+}
+.hero-btn:hover{
+    border: 1px solid #f44336;
+    background-color: #f44336;
+}
+
+nav .fa{
+    display: none;
+}
+
+
+/* toggle menu for small screen-------------------------------------------------------------------*/
+
+@media(max-width: 700px){
+    .textbox h1{
+        font-size: 30px;
+    }
+    .nav-links ul li{
+        display: block;
+    }
+    .nav-links{
+        position: absolute;
+        background: #f44336;
+        height: 100vh;
+        width:200px;
+        top: 0;
+        right: -200;
+        text-align: left;
+        z-index:2 ;
+        transition: 1s;
+    }
+    nav .fa{
+        display: block;
+        color: #fff;
+        margin: 10px;
+        font-size: 22px;
+        cursor: pointer;
+    }
+}
+/* -----------------------------------------------------------------------------------*/
