--- a/style.css
+++ b/style.css
@@ -228,3 +228,97 @@ background:rgba(226,0,0,0.7) ;
     bottom: 49%;
     opacity: 1;
 }
+
+/*facilities-------------------------------*/
+
+.facilities{
+    width: 80%;
+    margin: auto;
+   text-align: center;
+   padding-top: 80px;
+  
+}
+.facilities-col{
+    flex-basis: 31%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    text-align: left;
+}
+.facilities-col img{
+    width: 100%;
+    border-radius: 10px;
+}
+.facilities-col p{
+    padding: 0;
+    text-align: center;
+}
+.facilities-col h3{
+    margin-top: 16px;
+    margin-bottom: 16px;
+    text-align: center;
+}
+
+
+/*testimonials----------------------------------------*/
+
+.testimonials{
+    width: 80%;
+    margin: auto;
+    padding-top:100px ;
+    text-align: center;
+}
+.testimonial-col{
+    flex-basis: 44%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    text-align: left;
+    background: #fff3f3;
+    padding: 25px;
+    cursor: pointer;
+    display: flex;
+}
+.testimonial-col img{
+    height: 40px;
+    margin-left: 5px;
+    margin-right: 30px;
+    border-radius: 50%;
+}
+.testimonial-col p{
+    padding: 0;
+}
+.testimonial-col h3{
+    margin-top: 15px;
+    text-align: left;
+}
+
+
+/*Call to action--------------------*/
+
+.cta{
+    margin:100px auto;
+    width: 80%;
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(images/banner2.jpg);
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+    text-align: center;
+    padding: 100px 0;
+}
+.cta h1{
+    color: #fff;
+    margin-bottom: 40px;
+    padding: 0;
+}
+
+/*footer-------------------*/
+.footer{
+    width: 100%;
+    text-align: center;
+    padding: 30px 0;
+}
+.footer h4{
+    margin-bottom: 25px;
+    margin-top: 20px;
+    font-weight: 600;
+}
+
